Refactor BadgeGenerator to use JSON files instead of JMH RunResult
- Removed dependency on JMH RunResult from BadgeGenerator
- BadgeGenerator now reads directly from JSON result files using Gson
- Updated BenchmarkResultProcessor to pass JSON file path to BadgeGenerator
- Simplified tests to use real JSON test data without mocking
- Removed unnecessary test helper classes
- Badge format now includes performance score with throughput and latency

This is the first step in removing JMH dependencies from the reporting layer,
making the reporting components more flexible and testable.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>